FindBugs cleanups.